Fix text align in CSS

--- a/cs.css
+++ b/cs.css
@@ -39,6 +39,7 @@ nav li {
 main {
   width: 960px;
   margin: 30px auto;
+  text-align: start;
 }
 
 p{
@@ -66,6 +67,10 @@ font-weight: bolder;
 
 section{
   align-items:center;
+}
+
+h4{
+  text-align: center;
 }
 
 .camping_options {
